# Robotics

Lab_1/ex01/: commands.txt
Lab_2/: commands
Lab_2/ex02/: list_exec_action_tutorials.txt
Lab_2/ex03/svolodina/: package.xml  setup.cfg  setup.py
Lab_2/ex04/: colcon_build.txt
Lab_2/ex05/: rosnode_info.txt  rosnode_list.txt
Lab_2/ex06/: cmd_vel.txt
Lab_2/ex08/: rqt_console.txt
Lab_2/ex09/tutorial_interfaces/: CMakeLists.txt  package.xml
Lab_2/ex10/py_pubsub/: package.xml  setup.py
Lab_3/: commands
Lab_3/ex01/py_srvcli/: package.xml  setup.py
Lab_3/ex01/tutorial_interfaces/: package.xml
Lab_3/ex02/py_actions/: package.xml  setup.py
Lab_3/ex03/: pose_speed_x1.2.yaml  pose_speed_x1.yaml
Lab_3/ex03/turtle_cmd_vel.mcap/: metadata.yaml  turtle_cmd_vel.mcap_0.db3
Lab_3/ex04/: doctor.txt
Lab_3/ex05/move_to_goal/: package.xml  setup.py
Lab_4/: commands.txt
Lab_4/ex01/: last_transform.txt  transform.txt
Lab_4/ex02/learning_tf2_py/: package.xml  setup.py
Lab_4/ex03/time_travel/: package.xml  setup.py
Lab_5/: commands.txt
Lab_5/ex01/: robot.urdf  robot_display.launch.py
Lab_5/ex02/: robot.urdf.xacro
Lab_5/ex03/robot_app/: package.xml
Lab_5/ex03/robot_bringup/: package.xml
Lab_5/ex03/robot_description/: package.xml
Lab_5/ex04/circle/: package.xml  setup.py
Lab_5/ex05/chess/: package.xml  setup.py
Lab_5/ex05/my_robot/: CMakeLists.txt  package.xml
Lab_6/: commands
Lab_6/ex01/sensors/: CMakeLists.txt
Lab_6/ex01/sensors/urdf/: depth.urdf.xacro  gazebo.urdf.xacro  lidar.urdf.xacro  robot.urdf.xacro
Lab_6/ex04/lidar/: setup.py  (+1 more)
(+27 files in other folders)
